# gradpath-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER_README.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  git_status.txt  git_status2.txt  nginx.conf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  analyze_short.py  cleanup_spam.py  dedup_knowledge.py  enrich.py  final_cleanup.py  final_stats.py  final_stats2.py  gradpath.db  insert_answers.py  insert_schools.py  list_tables.py  pyproject.toml  pytest_result.xml  task3_4.py  verify_all.py  verify_counts_tmp.py  verify_v2.py
backend/app/: celery_app.py  config.py  database.py  error_handlers.py  main.py  metrics.py
backend/app/api/: __init__.py  admission_predict.py  ai.py  ai_agent.py  ai_enhanced.py  ai_study_plan.py  analytics_api.py  assessment.py  auth.py  bookmarks.py  career_events.py  career_intel.py  career_plans.py  career_profile.py  career_simulator.py  chat.py  civil_service_intel.py  comments.py  community.py  community_rating.py  crawlers.py  dark_knowledge_push.py  dashboard.py  data_freshness.py  decision_analysis.py  decision_journal.py  decision_pulse.py  decisions.py  employment.py  events.py  experience_posts.py  export.py  export_v2.py  feedback.py  follow.py  gamification.py  grad_intel.py  grad_visualization.py  growth_patterns.py  interview.py  (+30 more)
backend/app/core/: cache.py  cursor_pagination.py  deps.py  exceptions.py  logging.py  rate_limit.py  security.py  security_headers.py  websocket_manager.py
backend/app/crawlers/: base_crawler.py  crawl4ai_scraper.py  crawler_config.py  registry.py  run.py
backend/app/models/: __init__.py  assessment.py  base.py  bookmark.py  career_event.py  career_intel.py  career_plan.py  career_profile.py  civil_service_intel.py  comment.py  community_rating.py  community_report.py  company.py  company_review.py  conversation.py  crawler_run.py  dark_knowledge_push.py  data_source.py  dataset_info.py  decision_analysis.py  decision_review.py  destination_decision.py  embedding_model.py  employment_data.py  event.py  experience_post.py  follow.py  grad_intel.py  growth_insight.py  growth_snapshot.py  interview_report.py  kaoyan_news.py  knowledge_article.py  learning_resource.py  life_design.py  life_wheel.py  market_data.py  mentor.py  mentor_review.py  milestone_log.py  (+20 more)
backend/app/schemas/: ai.py  assessment.py  auth.py  bookmark.py  career_intel.py  career_profile.py  chat.py  civil_service_intel.py  comment.py  common.py  community.py  crawler_run.py  dashboard.py  decision.py  decision_analysis.py  decision_journal.py  employment.py  event.py  experience_post.py  gamification.py  grad_intel.py  growth_pattern.py  interview.py  kaoyan_news.py  knowledge.py  learning_resource.py  life_design.py  life_wheel.py  mentor.py  notification.py  outcome_report.py  pipeline.py  post.py  proactive_insight.py  qa.py  research_admin.py  retrospective.py  skill.py  streak.py  study_plan.py
backend/app/seed/: __init__.py  add_grad_intel.py  check_remaining.py  count_all.py  count_qa.py  find_all_corrupted.py  find_corrupted.py  find_incomplete_qa.py  find_one_answer.py  fix_corrupted.py  fix_one_answer.py  fix_qa_answers.py  fix_remaining.py  generate_entries.ps1  run_all_new_crawlers.py  run_all_seeds.py  seed_civil_service.py  seed_community.py  (+13 more)
backend/docs/: research_mapping.md
backend/gradpath_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/pipeline/: cli.py  extractor.py  fetcher.py  reviewer.py  router.py  seed.py  seed_community.py  seed_data.py  seed_interview.py  seed_sources.py
backend/scripts/: add_pg_trgm_indexes.sql  api_performance_report.json  api_performance_test.py  backup_db.sh  backup_redis.sh  backup_verify.sh  batch_generate_v2.py  batch_qa_wave2.py  batch_sql_insert.py  check_data.py  check_schema.py  check_schemas.py  check_tables.py  db_integrity_check.py  db_integrity_report.json  e2e_test_report.json  e2e_verification.py  init_new_modules.py  restore_db.sh  scoreline_gen.py  scoreline_gen2.py  scoreline_gen3.py  scoreline_gen4.py  scoreline_log.txt  seed_kaoyan_data.py  seed_mentor_data.py  temp_check.py  temp_check2.py  test_all_modules.py  test_chat_debug.py  test_delete.py  test_delete2.py  test_delete3.py  test_delete4.py  test_delete5.py  test_llm_key.py  vectorize_data.py  verify_counts.py
backend/tests/: conftest.py  test_ai_circuit_breaker.py  test_ai_quota.py  test_api_ai.py  test_api_comments.py  test_api_community.py  test_api_employment.py  test_api_external_data.py  test_api_grad_intel.py  test_api_interview.py  test_api_metrics.py  test_api_pipeline.py  test_api_posts.py  test_api_sources.py  test_assessment.py  test_atomic_update.py  test_auth.py  test_batch_endpoints.py  test_career_plans.py  test_career_profile.py  test_celery_tasks.py  test_chat.py  test_config.py  test_crawlers.py  test_cursor_pagination.py  test_dashboard.py  test_decisions.py  test_events.py  test_exceptions.py  test_export.py  test_external_data_cache.py  test_gamification.py  test_health.py  test_input_validation.py  test_knowledge.py  test_logging.py  test_metrics.py  test_models_employment.py  test_new_models_phase_a.py  test_notification_archive.py  (+19 more)
(+718 files in other folders)
